// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VenueOverview dark mode matches snapshot 1`] = `
<View
  style={
    {
      "gap": 16,
    }
  }
>
  <View
    style={
      {
        "gap": 12,
        "maxWidth": 440,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "rgba(255,255,255,0.95)",
          "borderRadius": 20,
          "elevation": 8,
          "gap": 10,
          "maxWidth": 420,
          "paddingHorizontal": 20,
          "paddingVertical": 18,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.12,
          "shadowRadius": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#F8FAFC",
              },
              {
                "fontSize": 16,
                "fontWeight": "400",
              },
              {
                "color": "#111827",
                "flex": 1,
                "fontSize": 22,
                "fontWeight": "700",
              },
            ]
          }
        >
          Porto Cervo
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#f3f4f6",
              "borderRadius": 999,
              "flexDirection": "row",
              "gap": 6,
              "paddingHorizontal": 10,
              "paddingVertical": 6,
            }
          }
        >
          <Icon
            color="#1f2937"
            name="flag-outline"
            size={14}
          />
          <Text
            style={
              [
                {
                  "color": "#F8FAFC",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                {
                  "color": "#1f2937",
                  "fontSize": 12,
                  "fontWeight": "600",
                },
              ]
            }
          >
            Italy • Sardinia
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <Icon
          color="#2563eb"
          name="pin-outline"
          size={16}
        />
        <Text
          style={
            [
              {
                "color": "#F8FAFC",
              },
              {
                "fontSize": 16,
                "fontWeight": "400",
              },
              {
                "color": "#1f2937",
                "fontSize": 14,
              },
            ]
          }
        >
          4.6 nm from current position
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <Icon
          color="#2563eb"
          name="compass-outline"
          size={16}
        />
        <Text
          style={
            [
              {
                "color": "#F8FAFC",
              },
              {
                "fontSize": 16,
                "fontWeight": "400",
              },
              {
                "color": "#1f2937",
                "fontSize": 14,
              },
            ]
          }
        >
          NE 14kts • Gusting 20kts
        </Text>
      </View>
      <View
        style={
          {
            "backgroundColor": "#eff6ff",
            "borderRadius": 12,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#F8FAFC",
              },
              {
                "fontSize": 16,
                "fontWeight": "400",
              },
              {
                "color": "#1d4ed8",
                "fontSize": 13,
                "lineHeight": 18,
              },
            ]
          }
        >
          Customs pre-clearance closes at 17:00 local.
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 12,
            "marginTop": 4,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#2563eb",
              "borderRadius": 14,
              "flex": 1,
              "flexDirection": "row",
              "gap": 6,
              "justifyContent": "center",
              "opacity": 1,
              "paddingVertical": 12,
            }
          }
        >
          <Icon
            color="#fff"
            name="navigate"
            size={18}
          />
          <Text
            style={
              [
                {
                  "color": "#F8FAFC",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                {
                  "color": "#fff",
                  "fontSize": 15,
                  "fontWeight": "600",
                },
              ]
            }
          >
            Navigate
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 4,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.95)",
            "borderRadius": 18,
            "elevation": 6,
            "gap": 6,
            "maxWidth": 420,
            "paddingHorizontal": 18,
            "paddingVertical": 16,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.08,
            "shadowRadius": 12,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#F8FAFC",
              },
              {
                "fontSize": 16,
                "fontWeight": "400",
              },
              {
                "color": "#111827",
                "fontSize": 16,
                "fontWeight": "700",
              },
            ]
          }
        >
          Travel Resources
        </Text>
        <Text
          style={
            [
              {
                "color": "#F8FAFC",
              },
              {
                "fontSize": 16,
                "fontWeight": "400",
              },
              {
                "color": "#6b7280",
                "fontSize": 12,
                "marginBottom": 6,
              },
            ]
          }
        >
          Toggle the layers you need while planning your trip
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 8,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#2563eb15",
                "borderColor": "#2563eb",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#2563eb"
              name="boat"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#2563eb",
                    },
                  ],
                ]
              }
            >
              Yacht Clubs
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9731615",
                "borderColor": "#f97316",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#f97316"
              name="triangle-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#f97316",
                    },
                  ],
                ]
              }
            >
              Sailmakers
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderColor": "#e5e7eb",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#4b5563"
              name="git-network-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#374151",
                    },
                  ],
                ]
              }
            >
              Riggers
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderColor": "#e5e7eb",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#4b5563"
              name="person-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#374151",
                    },
                  ],
                ]
              }
            >
              Coaches
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderColor": "#e5e7eb",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#4b5563"
              name="cart-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#374151",
                    },
                  ],
                ]
              }
            >
              Chandlery
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fb923c15",
                "borderColor": "#fb923c",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#fb923c"
              name="shirt-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#fb923c",
                    },
                  ],
                ]
              }
            >
              Foul Weather
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#0ea5e915",
                "borderColor": "#0ea5e9",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#0ea5e9"
              name="boat-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#0ea5e9",
                    },
                  ],
                ]
              }
            >
              Marinas
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderColor": "#e5e7eb",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#4b5563"
              name="construct-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#374151",
                    },
                  ],
                ]
              }
            >
              Repair
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#64748b15",
                "borderColor": "#64748b",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#64748b"
              name="cog-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#64748b",
                    },
                  ],
                ]
              }
            >
              Engine
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F8FAFC",
            },
            {
              "fontSize": 16,
              "fontWeight": "400",
            },
            {
              "color": "#1f2937",
              "fontSize": 14,
              "fontWeight": "700",
              "marginBottom": 8,
            },
          ]
        }
      >
        Quick Intel
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 12,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(255,255,255,0.95)",
              "borderRadius": 16,
              "elevation": 4,
              "flexBasis": "47%",
              "gap": 4,
              "padding": 14,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.08,
              "shadowRadius": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  {
                    "color": "#6b7280",
                    "fontSize": 12,
                    "fontWeight": "600",
                    "textTransform": "uppercase",
                  },
                ]
              }
            >
              Dockage
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "color": "#F8FAFC",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                [
                  {
                    "color": "#111827",
                    "fontSize": 20,
                    "fontWeight": "700",
                  },
                  undefined,
                ],
              ]
            }
          >
            78%
          </Text>
          <Text
            style={
              [
                {
                  "color": "#F8FAFC",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                {
                  "color": "#4b5563",
                  "fontSize": 12,
                },
              ]
            }
          >
            4 slips available
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "rgba(255,255,255,0.95)",
              "borderRadius": 16,
              "elevation": 4,
              "flexBasis": "47%",
              "gap": 4,
              "padding": 14,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.08,
              "shadowRadius": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  {
                    "color": "#6b7280",
                    "fontSize": 12,
                    "fontWeight": "600",
                    "textTransform": "uppercase",
                  },
                ]
              }
            >
              Fuel
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "color": "#F8FAFC",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                [
                  {
                    "color": "#111827",
                    "fontSize": 20,
                    "fontWeight": "700",
                  },
                  undefined,
                ],
              ]
            }
          >
            Diesel + Gas
          </Text>
          <Text
            style={
              [
                {
                  "color": "#F8FAFC",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                {
                  "color": "#6b7280",
                  "fontSize": 12,
                },
              ]
            }
          >
            → Steady
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#F8FAFC",
            },
            {
              "fontSize": 16,
              "fontWeight": "400",
            },
            {
              "color": "#1f2937",
              "fontSize": 14,
              "fontWeight": "700",
              "marginBottom": 8,
            },
          ]
        }
      >
        Travel Checklist
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.95)",
            "borderRadius": 16,
            "elevation": 4,
            "gap": 16,
            "padding": 16,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.08,
            "shadowRadius": 12,
          }
        }
      >
        <View
          style={
            {
              "gap": 10,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#F8FAFC",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                {
                  "color": "#1f2937",
                  "fontSize": 13,
                  "fontWeight": "700",
                  "textTransform": "uppercase",
                },
              ]
            }
          >
            Arrival Prep
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 10,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 5,
                      "height": 10,
                      "marginTop": 6,
                      "width": 10,
                    },
                    {
                      "backgroundColor": "#10b981",
                    },
                  ]
                }
              />
              <View>
                <Text
                  style={
                    [
                      {
                        "color": "#F8FAFC",
                      },
                      {
                        "fontSize": 16,
                        "fontWeight": "400",
                      },
                      {
                        "color": "#111827",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  Crew passports uploaded
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 10,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 5,
                      "height": 10,
                      "marginTop": 6,
                      "width": 10,
                    },
                    {
                      "backgroundColor": "#d1d5db",
                    },
                  ]
                }
              />
              <View>
                <Text
                  style={
                    [
                      {
                        "color": "#F8FAFC",
                      },
                      {
                        "fontSize": 16,
                        "fontWeight": "400",
                      },
                      {
                        "color": "#111827",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  Pilotage briefing scheduled
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "gap": 10,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#F8FAFC",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                {
                  "color": "#1f2937",
                  "fontSize": 13,
                  "fontWeight": "700",
                  "textTransform": "uppercase",
                },
              ]
            }
          >
            Ops
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 10,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 5,
                      "height": 10,
                      "marginTop": 6,
                      "width": 10,
                    },
                    {
                      "backgroundColor": "#f97316",
                    },
                  ]
                }
              />
              <View>
                <Text
                  style={
                    [
                      {
                        "color": "#F8FAFC",
                      },
                      {
                        "fontSize": 16,
                        "fontWeight": "400",
                      },
                      {
                        "color": "#111827",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  Shore power confirmed
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 12,
      }
    }
  >
    <View
      style={
        {
          "gap": 16,
        }
      }
    >
      <View
        style={
          {
            "gap": 12,
            "maxWidth": 440,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(255,255,255,0.95)",
              "borderRadius": 20,
              "elevation": 8,
              "gap": 10,
              "maxWidth": 420,
              "paddingHorizontal": 20,
              "paddingVertical": 18,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 6,
                "width": 0,
              },
              "shadowOpacity": 0.12,
              "shadowRadius": 16,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  {
                    "color": "#111827",
                    "flex": 1,
                    "fontSize": 22,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Training Dock
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <Icon
              color="#2563eb"
              name="pin-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#F8FAFC",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  {
                    "color": "#1f2937",
                    "fontSize": 14,
                  },
                ]
              }
            >
              1.2 nm away
            </Text>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 12,
                "marginTop": 4,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#2563eb",
                  "borderRadius": 14,
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 6,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 12,
                }
              }
            >
              <Icon
                color="#fff"
                name="navigate"
                size={18}
              />
              <Text
                style={
                  [
                    {
                      "color": "#F8FAFC",
                    },
                    {
                      "fontSize": 16,
                      "fontWeight": "400",
                    },
                    {
                      "color": "#fff",
                      "fontSize": 15,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Navigate
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`VenueOverview light mode matches snapshot 1`] = `
<View
  style={
    {
      "gap": 16,
    }
  }
>
  <View
    style={
      {
        "gap": 12,
        "maxWidth": 440,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "rgba(255,255,255,0.95)",
          "borderRadius": 20,
          "elevation": 8,
          "gap": 10,
          "maxWidth": 420,
          "paddingHorizontal": 20,
          "paddingVertical": 18,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 6,
            "width": 0,
          },
          "shadowOpacity": 0.12,
          "shadowRadius": 16,
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#0F172A",
              },
              {
                "fontSize": 16,
                "fontWeight": "400",
              },
              {
                "color": "#111827",
                "flex": 1,
                "fontSize": 22,
                "fontWeight": "700",
              },
            ]
          }
        >
          Porto Cervo
        </Text>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#f3f4f6",
              "borderRadius": 999,
              "flexDirection": "row",
              "gap": 6,
              "paddingHorizontal": 10,
              "paddingVertical": 6,
            }
          }
        >
          <Icon
            color="#1f2937"
            name="flag-outline"
            size={14}
          />
          <Text
            style={
              [
                {
                  "color": "#0F172A",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                {
                  "color": "#1f2937",
                  "fontSize": 12,
                  "fontWeight": "600",
                },
              ]
            }
          >
            Italy • Sardinia
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <Icon
          color="#2563eb"
          name="pin-outline"
          size={16}
        />
        <Text
          style={
            [
              {
                "color": "#0F172A",
              },
              {
                "fontSize": 16,
                "fontWeight": "400",
              },
              {
                "color": "#1f2937",
                "fontSize": 14,
              },
            ]
          }
        >
          4.6 nm from current position
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 6,
          }
        }
      >
        <Icon
          color="#2563eb"
          name="compass-outline"
          size={16}
        />
        <Text
          style={
            [
              {
                "color": "#0F172A",
              },
              {
                "fontSize": 16,
                "fontWeight": "400",
              },
              {
                "color": "#1f2937",
                "fontSize": 14,
              },
            ]
          }
        >
          NE 14kts • Gusting 20kts
        </Text>
      </View>
      <View
        style={
          {
            "backgroundColor": "#eff6ff",
            "borderRadius": 12,
            "padding": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#0F172A",
              },
              {
                "fontSize": 16,
                "fontWeight": "400",
              },
              {
                "color": "#1d4ed8",
                "fontSize": 13,
                "lineHeight": 18,
              },
            ]
          }
        >
          Customs pre-clearance closes at 17:00 local.
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 12,
            "marginTop": 4,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#2563eb",
              "borderRadius": 14,
              "flex": 1,
              "flexDirection": "row",
              "gap": 6,
              "justifyContent": "center",
              "opacity": 1,
              "paddingVertical": 12,
            }
          }
        >
          <Icon
            color="#fff"
            name="navigate"
            size={18}
          />
          <Text
            style={
              [
                {
                  "color": "#0F172A",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                {
                  "color": "#fff",
                  "fontSize": 15,
                  "fontWeight": "600",
                },
              ]
            }
          >
            Navigate
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 4,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.95)",
            "borderRadius": 18,
            "elevation": 6,
            "gap": 6,
            "maxWidth": 420,
            "paddingHorizontal": 18,
            "paddingVertical": 16,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.08,
            "shadowRadius": 12,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#0F172A",
              },
              {
                "fontSize": 16,
                "fontWeight": "400",
              },
              {
                "color": "#111827",
                "fontSize": 16,
                "fontWeight": "700",
              },
            ]
          }
        >
          Travel Resources
        </Text>
        <Text
          style={
            [
              {
                "color": "#0F172A",
              },
              {
                "fontSize": 16,
                "fontWeight": "400",
              },
              {
                "color": "#6b7280",
                "fontSize": 12,
                "marginBottom": 6,
              },
            ]
          }
        >
          Toggle the layers you need while planning your trip
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "flexWrap": "wrap",
              "gap": 8,
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#2563eb15",
                "borderColor": "#2563eb",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#2563eb"
              name="boat"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#2563eb",
                    },
                  ],
                ]
              }
            >
              Yacht Clubs
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#f9731615",
                "borderColor": "#f97316",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#f97316"
              name="triangle-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#f97316",
                    },
                  ],
                ]
              }
            >
              Sailmakers
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderColor": "#e5e7eb",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#4b5563"
              name="git-network-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#374151",
                    },
                  ],
                ]
              }
            >
              Riggers
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderColor": "#e5e7eb",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#4b5563"
              name="person-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#374151",
                    },
                  ],
                ]
              }
            >
              Coaches
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderColor": "#e5e7eb",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#4b5563"
              name="cart-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#374151",
                    },
                  ],
                ]
              }
            >
              Chandlery
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fb923c15",
                "borderColor": "#fb923c",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#fb923c"
              name="shirt-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#fb923c",
                    },
                  ],
                ]
              }
            >
              Foul Weather
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#0ea5e915",
                "borderColor": "#0ea5e9",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#0ea5e9"
              name="boat-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#0ea5e9",
                    },
                  ],
                ]
              }
            >
              Marinas
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "borderColor": "#e5e7eb",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#4b5563"
              name="construct-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#374151",
                    },
                  ],
                ]
              }
            >
              Repair
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#64748b15",
                "borderColor": "#64748b",
                "borderRadius": 999,
                "borderWidth": 1,
                "flexDirection": "row",
                "gap": 6,
                "opacity": 1,
                "paddingHorizontal": 12,
                "paddingVertical": 8,
              }
            }
          >
            <Icon
              color="#64748b"
              name="cog-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                    },
                    {
                      "color": "#64748b",
                    },
                  ],
                ]
              }
            >
              Engine
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#0F172A",
            },
            {
              "fontSize": 16,
              "fontWeight": "400",
            },
            {
              "color": "#1f2937",
              "fontSize": 14,
              "fontWeight": "700",
              "marginBottom": 8,
            },
          ]
        }
      >
        Quick Intel
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 12,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(255,255,255,0.95)",
              "borderRadius": 16,
              "elevation": 4,
              "flexBasis": "47%",
              "gap": 4,
              "padding": 14,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.08,
              "shadowRadius": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  {
                    "color": "#6b7280",
                    "fontSize": 12,
                    "fontWeight": "600",
                    "textTransform": "uppercase",
                  },
                ]
              }
            >
              Dockage
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "color": "#0F172A",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                [
                  {
                    "color": "#111827",
                    "fontSize": 20,
                    "fontWeight": "700",
                  },
                  undefined,
                ],
              ]
            }
          >
            78%
          </Text>
          <Text
            style={
              [
                {
                  "color": "#0F172A",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                {
                  "color": "#4b5563",
                  "fontSize": 12,
                },
              ]
            }
          >
            4 slips available
          </Text>
        </View>
        <View
          style={
            {
              "backgroundColor": "rgba(255,255,255,0.95)",
              "borderRadius": 16,
              "elevation": 4,
              "flexBasis": "47%",
              "gap": 4,
              "padding": 14,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 4,
                "width": 0,
              },
              "shadowOpacity": 0.08,
              "shadowRadius": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  {
                    "color": "#6b7280",
                    "fontSize": 12,
                    "fontWeight": "600",
                    "textTransform": "uppercase",
                  },
                ]
              }
            >
              Fuel
            </Text>
          </View>
          <Text
            style={
              [
                {
                  "color": "#0F172A",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                [
                  {
                    "color": "#111827",
                    "fontSize": 20,
                    "fontWeight": "700",
                  },
                  undefined,
                ],
              ]
            }
          >
            Diesel + Gas
          </Text>
          <Text
            style={
              [
                {
                  "color": "#0F172A",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                {
                  "color": "#6b7280",
                  "fontSize": 12,
                },
              ]
            }
          >
            → Steady
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "marginTop": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#0F172A",
            },
            {
              "fontSize": 16,
              "fontWeight": "400",
            },
            {
              "color": "#1f2937",
              "fontSize": 14,
              "fontWeight": "700",
              "marginBottom": 8,
            },
          ]
        }
      >
        Travel Checklist
      </Text>
      <View
        style={
          {
            "backgroundColor": "rgba(255,255,255,0.95)",
            "borderRadius": 16,
            "elevation": 4,
            "gap": 16,
            "padding": 16,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.08,
            "shadowRadius": 12,
          }
        }
      >
        <View
          style={
            {
              "gap": 10,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#0F172A",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                {
                  "color": "#1f2937",
                  "fontSize": 13,
                  "fontWeight": "700",
                  "textTransform": "uppercase",
                },
              ]
            }
          >
            Arrival Prep
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 10,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 5,
                      "height": 10,
                      "marginTop": 6,
                      "width": 10,
                    },
                    {
                      "backgroundColor": "#10b981",
                    },
                  ]
                }
              />
              <View>
                <Text
                  style={
                    [
                      {
                        "color": "#0F172A",
                      },
                      {
                        "fontSize": 16,
                        "fontWeight": "400",
                      },
                      {
                        "color": "#111827",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  Crew passports uploaded
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 10,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 5,
                      "height": 10,
                      "marginTop": 6,
                      "width": 10,
                    },
                    {
                      "backgroundColor": "#d1d5db",
                    },
                  ]
                }
              />
              <View>
                <Text
                  style={
                    [
                      {
                        "color": "#0F172A",
                      },
                      {
                        "fontSize": 16,
                        "fontWeight": "400",
                      },
                      {
                        "color": "#111827",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  Pilotage briefing scheduled
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "gap": 10,
            }
          }
        >
          <Text
            style={
              [
                {
                  "color": "#0F172A",
                },
                {
                  "fontSize": 16,
                  "fontWeight": "400",
                },
                {
                  "color": "#1f2937",
                  "fontSize": 13,
                  "fontWeight": "700",
                  "textTransform": "uppercase",
                },
              ]
            }
          >
            Ops
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "justifyContent": "space-between",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "flex-start",
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 10,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 5,
                      "height": 10,
                      "marginTop": 6,
                      "width": 10,
                    },
                    {
                      "backgroundColor": "#f97316",
                    },
                  ]
                }
              />
              <View>
                <Text
                  style={
                    [
                      {
                        "color": "#0F172A",
                      },
                      {
                        "fontSize": 16,
                        "fontWeight": "400",
                      },
                      {
                        "color": "#111827",
                        "fontSize": 14,
                        "fontWeight": "600",
                      },
                    ]
                  }
                >
                  Shore power confirmed
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 12,
      }
    }
  >
    <View
      style={
        {
          "gap": 16,
        }
      }
    >
      <View
        style={
          {
            "gap": 12,
            "maxWidth": 440,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "rgba(255,255,255,0.95)",
              "borderRadius": 20,
              "elevation": 8,
              "gap": 10,
              "maxWidth": 420,
              "paddingHorizontal": 20,
              "paddingVertical": 18,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 6,
                "width": 0,
              },
              "shadowOpacity": 0.12,
              "shadowRadius": 16,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 12,
                "justifyContent": "space-between",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  {
                    "color": "#111827",
                    "flex": 1,
                    "fontSize": 22,
                    "fontWeight": "700",
                  },
                ]
              }
            >
              Training Dock
            </Text>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <Icon
              color="#2563eb"
              name="pin-outline"
              size={16}
            />
            <Text
              style={
                [
                  {
                    "color": "#0F172A",
                  },
                  {
                    "fontSize": 16,
                    "fontWeight": "400",
                  },
                  {
                    "color": "#1f2937",
                    "fontSize": 14,
                  },
                ]
              }
            >
              1.2 nm away
            </Text>
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 12,
                "marginTop": 4,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#2563eb",
                  "borderRadius": 14,
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 6,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 12,
                }
              }
            >
              <Icon
                color="#fff"
                name="navigate"
                size={18}
              />
              <Text
                style={
                  [
                    {
                      "color": "#0F172A",
                    },
                    {
                      "fontSize": 16,
                      "fontWeight": "400",
                    },
                    {
                      "color": "#fff",
                      "fontSize": 15,
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Navigate
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
